# shopify-installer

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  wsgi.py
.github/workflows/: deploy-test.yml
authenticator/: setup.py
authenticator/routes/: __init__.py  install.py  token_exchange.py
authenticator/tools/: __init__.py  db_handle.py  env_fetcher.py  hmac_verify.py  redis_caching.py
installer/: env.py
installer/routes/: __init__.py  install.py  token_exchange.py
installer/tools/: __init__.py  db_handle.py  env_fetcher.py  hmac_verify.py
tools/: shell.nix
